--- a/Final Report.Rmd
+++ b/Final Report.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(PHC6099FinalProject)
 library(dplyr)
 library(tidyverse)
+library(grattantheme)
 ```
 
 # Introduction
