--- a/vignettes/using_cbithemingR.Rmd
+++ b/vignettes/using_cbithemingR.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(collapse = T, comment = "#>",
                       fig.height = height,
                       fig.retina = 2,
                       fig.width = width)
-library(tidyverse)
+libary(tidyverse)
 library(ggplot2)
 library(CBIthemingR)
 ```
