--- a/vignettes/using_cbithemingR.Rmd
+++ b/vignettes/using_cbithemingR.Rmd
@@ -87,7 +87,7 @@ data %>%
 ```
 
 ### Discrete Data:
-Note: Using built in iris dataset for discrete data examples.  
+Note: Using built in datasets for discrete data examples.  
 
 The function `scale_color_cbi` automatically handles discrete data via the discrete flag: 
 ```{r sample-plot5}
@@ -103,11 +103,20 @@ plot +
   cbi_base_theme() +
   scale_color_cbi(discrete = TRUE)
 ```
+For fill elements, use the function `scale_fill_cbi`:
+```{r sample-plot6}
+plot <- ggplot(iris,
+               aes(Sepal.Length, fill=Species)) +
+        geom_bar() +
+        cbi_base_theme() +
+        scale_fill_cbi(discrete = TRUE)
+plot
+```
 
 #### Discrete data that requires more than 10 colors:
 
 The function `make_cbi_pal` is able to handle discrete data that require more than 10 colors:
-```{r sample-plot6}
+```{r sample-plot7}
 ggplot(mtcars, aes(x = mpg, y = hp, colour = as.character(wt))) +
   geom_point() +
   cbi_base_theme() +
