--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = FALSE, message = FALSE, include=FALSE}
 height <- 4
 width <- 6
 
